# ai-rag-chat-full-stack

./: .gitignore  README.md
backend/: .env.example  backend_flattened.txt  misc.py  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/database/: connection.py
backend/app/models/: schemas.py
backend/app/routes/: chat.py
backend/app/services/: cache_service.py  rag_service.py
etc/nginx/conf.d/: default.conf
frontend/: .env.example  .prettierignore  flatten.js  frontend_flattened.txt  index.html  package-lock.json  package.json  prettier.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: chatApi.ts
frontend/src/components/: ChatHeader.tsx  CollapsedSidebar.tsx  ConversationItem.tsx  FloatingControls.tsx  NotificationCenter.tsx  Sidebar.tsx
frontend/src/components/InputArea/: DocumentChip.tsx  InputBar.tsx  UploadModal.tsx
frontend/src/components/Messages/: MessageBubble.tsx  MessagesList.tsx  index.ts
frontend/src/context/: ChatContext.tsx
frontend/src/hooks/: useEventSource.ts  useKeyboardShortcut.ts
