[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "faiss-cpu>=1.11.0",
    "faker>=37.4.0",
    "fastapi>=0.115.9",
    "httpx>=0.28.1",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.24",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pypdf2>=3.0.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-mock>=3.14.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "rank-bm25>=0.2.2",
    "redis>=6.2.0",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=4.1.0",
    "uvicorn>=0.34.3",
]
